--- a/index.html
+++ b/index.html
@@ -223,7 +223,6 @@
         <h3>Pricing</h3>
 
         <div class="limit3">
-
           <article class="section3__card3">
             <div class="section3__card3__containerPrice">
               <p class="section3__card3__containerPrice__basic">
@@ -231,9 +230,8 @@
               </p>
               <p class="section3__card3__containerPrice__price">$0</p>
               <p class="section3__card3__containerPrice__subtitle">&nbsp;</p>
-
             </div>
-            
+
             <ul class="section3__card3__containerFeature">
               <li>
                 <img
@@ -457,6 +455,8 @@
         <div class="packLogos">
           <img class="packLogos__x" src="./images/icon_x.png" />
           <img class="packLogos__facebook" src="./images/icon_facebook.png" />
+          <img class="section4__header__contact__pack__icon" src="/images/icon_linkedin.jpg"
+          />
         </div>
       </div>
     </footer>
