--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <img
           alt="home desktop"
           class="header__container__img"
-          src="/images/header_img.png"
+          src="./images/header_img.png"
         />
       </figure>
     </header>
@@ -167,16 +167,16 @@
             <figure class="section2__card2__containerImg2">
               <img
                 class="section2__card2__containerImg2__circleBlue"
-                src="/images/circle_blue.png"
+                src="./images/circle_blue.png"
               />
               <img
                 class="section2__card2__containerImg2__circleBluePc"
-                src="/images/circle_blue_pc.png"
+                src="./images/circle_blue_pc.png"
               />
               <img
                 alt="mobile phone"
                 class="section2__card2__containerImg2__mobile"
-                src="/images/img_iPhonePc.png"
+                src="./images/img_iPhonePc.png"
               />
             </figure>
             <div class="section2__card2__containerText">
@@ -208,11 +208,11 @@
             <figure class="section2__card3__containerImg">
               <img
                 class="section2__card3__containerImg__backgroundGreen"
-                src="/images/rectangle_green.png"
+                src="./images/rectangle_green.png"
               />
               <img
                 class="section2__card3__containerImg__megaphone"
-                src="/images/trumpet.png"
+                src="./images/trumpet.png"
               />
             </figure>
           </article>
@@ -236,35 +236,35 @@
               <li>
                 <img
                   class="section3__card3__containerFeature__input"
-                  src="/images/Checkbox.png"
+                  src="./images/Checkbox.png"
                 />
                 100 MB HDD
               </li>
               <li>
                 <img
                   class="section3__card3__containerFeature__input"
-                  src="/images/Checkbox.png"
+                  src="./images/Checkbox.png"
                 />
                 1 Subdomain
               </li>
               <li>
                 <img
                   class="section3__card3__containerFeature__input"
-                  src="/images/Checkbox.png"
+                  src="./images/Checkbox.png"
                 />
                 2 E-mails
               </li>
               <li>
                 <img
                   class="section3__card3__containerFeature__input"
-                  src="/images/Cross.png"
+                  src="./images/Cross.png"
                 />
                 Two years license
               </li>
               <li>
                 <img
                   class="section3__card3__containerFeature__input"
-                  src="/images/Cross.png"
+                  src="./images/Cross.png"
                 />
                 Full support
               </li>
@@ -287,35 +287,35 @@
               <li>
                 <img
                   class="section3__card3__containerFeature__input"
-                  src="/images/Checkbox.png"
+                  src="./images/Checkbox.png"
                 />
                 500 MB HDD
               </li>
               <li>
                 <img
                   class="section3__card3__containerFeature__input__checkbox"
-                  src="/images/Checkbox.png"
+                  src="./images/Checkbox.png"
                 />
                 2 Subdomain
               </li>
               <li>
                 <img
                   class="section3__card3__containerFeature__input__checkbox"
-                  src="/images/Checkbox.png"
+                  src="./images/Checkbox.png"
                 />
                 5 E-mails
               </li>
               <li>
                 <img
                   class="section3__card3__containerFeature__input__checkbox"
-                  src="/images/Checkbox.png"
+                  src="./images/Checkbox.png"
                 />
                 One years license
               </li>
               <li>
                 <img
                   class="section3__card3__containerFeature__input__checkbox"
-                  src="/images/Cross.png"
+                  src="./images/Cross.png"
                 />
                 Full support
               </li>
@@ -338,35 +338,35 @@
               <li>
                 <img
                   class="section3__card3__containerFeature__input"
-                  src="/images/Checkbox.png"
+                  src="./images/Checkbox.png"
                 />
                 2 GB HDD
               </li>
               <li>
                 <img
                   class="section3__card3__containerFeature__input__checkbox"
-                  src="/images/Checkbox.png"
+                  src="./images/Checkbox.png"
                 />
                 5 Subdomain
               </li>
               <li>
                 <img
                   class="section3__card3__containerFeature__input__checkbox"
-                  src="/images/Checkbox.png"
+                  src="./images/Checkbox.png"
                 />
                 20 E-mails
               </li>
               <li>
                 <img
                   class="section3__card3__containerFeature__input__checkbox"
-                  src="/images/Checkbox.png"
+                  src="./images/Checkbox.png"
                 />
                 Two years license
               </li>
               <li>
                 <img
                   class="section3__card3__containerFeature__input__checkbox"
-                  src="/images/Checkbox.png"
+                  src="./images/Checkbox.png"
                 />
                 Full support
               </li>
@@ -387,7 +387,7 @@
             <div class="section4__header__contact__pack">
               <img
                 class="section4__header__contact__pack__icon"
-                src="/images/icon_email.png"
+                src="./images/icon_email.png"
               />
               <p class="section4__header__contact__pack__text">
                 info@bestshop.xyz
@@ -396,7 +396,7 @@
             <div class="section4__header__contact__pack">
               <img
                 class="section4__header__contact__icon"
-                src="/images/icon_phone.png"
+                src="./images/icon_phone.png"
               />
               <p class="section4__header__contact__pack__text">123456789</p>
             </div>
@@ -404,7 +404,7 @@
             <div class="section4__header__contact__pack">
               <img
                 class="section4__header__contact__pack__icon"
-                src="/images/icon_linkedin.jpg"
+                src="./images/icon_linkedin.jpg"
               />
               <a
                 target="_blank"
@@ -455,7 +455,7 @@
         <div class="packLogos">
           <img class="packLogos__x" src="./images/icon_x.png" />
           <img class="packLogos__facebook" src="./images/icon_facebook.png" />
-          <img class="section4__header__contact__pack__icon" src="/images/icon_linkedin.jpg"
+          <img class="section4__header__contact__pack__icon" src="./images/icon_linkedin.jpg"
           />
         </div>
       </div>
