change cantac and footer´s logo

--- a/index.html
+++ b/index.html
@@ -390,15 +390,16 @@
                 src="./images/icon_email.png"
               />
               <p class="section4__header__contact__pack__text">
-                info@bestshop.xyz
+                alejandro.garcia.carmona@gmail.com
               </p>
             </div>
+
             <div class="section4__header__contact__pack">
               <img
-                class="section4__header__contact__icon"
+                class="section4__header__contact__pack__icon"
                 src="./images/icon_phone.png"
               />
-              <p class="section4__header__contact__pack__text">123456789</p>
+              <p class="section4__header__contact__pack__text">690769237</p>
             </div>
 
             <div class="section4__header__contact__pack">
@@ -455,8 +456,15 @@
         <div class="packLogos">
           <img class="packLogos__x" src="./images/icon_x.png" />
           <img class="packLogos__facebook" src="./images/icon_facebook.png" />
-          <img class="section4__header__contact__pack__icon" src="./images/icon_linkedin.jpg"
-          />
+          
+          <a
+          
+          href="https://www.linkedin.com/in/alejandrogarciacarmona/"
+          >
+            <img
+            class="packLogos__linkedin"
+            src="./images/icon_linkedin.jpg"
+          /></a>
         </div>
       </div>
     </footer>
