correct img_iphonePc to img_iphonePC

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
               <img
                 alt="mobile phone"
                 class="section2__card2__containerImg2__mobile"
-                src="./images/img_iPhonePc.png"
+                src="./images/img_iPhonePC.png"
               />
             </figure>
             <div class="section2__card2__containerText">
