--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         </ul>
       </div>
     </nav>
+    
+    <div class="scrollerBar">
+      <div id="scrollerBar__bar" class="scrollerBar__bar"></div>
+    </div>
 
     <header>
       <h1>Sell More!</h1>
@@ -467,5 +471,6 @@
       </div>
     </footer>
     <script src="./scripts/nav.js"></script>
+    <script src="./scripts/components/percentageScroller.js"></script>
   </body>
 </html>
