buttonToUp done & correct nav

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav>
       <div class="limit">
         <h2 class="logoNav">OXYGEN Shop</h2>
-        <button class="burger" id="open" >
+        <button class="burger" id="open">
           <img src="./images/nav_menu.png" />
         </button>
         <button class="close noVisible" id="close">
@@ -32,12 +32,15 @@
         </ul>
       </div>
     </nav>
-    
+
     <div class="scrollerBar">
       <div id="scrollerBar__bar" class="scrollerBar__bar"></div>
     </div>
 
     <header>
+      <button class="container_icon" id="arrow_icon">
+        <img class="container_icon__arrowUp" src="./images/icon_arrow_up.png" />
+      </button>
       <h1>Sell More!</h1>
       <p>Open shop on our platform and increase your sales</p>
       <button>Open your shop</button>
@@ -470,7 +473,9 @@
         </div>
       </div>
     </footer>
+
     <script src="./scripts/nav.js"></script>
     <script src="./scripts/components/percentageScroller.js"></script>
+    <script src="./scripts/components/butomToUp.js"></script>
   </body>
 </html>
