--- a/index.html
+++ b/index.html
@@ -38,9 +38,6 @@
     </div>
 
     <header>
-      <button class="container_icon" id="arrow_icon">
-        <img class="container_icon__arrowUp" src="./images/icon_arrow_up.png" />
-      </button>
       <h1>Sell More!</h1>
       <p>Open shop on our platform and increase your sales</p>
       <button>Open your shop</button>
@@ -455,6 +452,12 @@
           </form>
         </div>
       </section>
+      <button class="container_icon" id="arrow_icon">
+        <img
+          class="container_icon__arrowUp"
+          src="./images/icon_arrow_up.png"
+        />
+      </button>
     </main>
 
     <footer>
@@ -468,8 +471,8 @@
           <img class="packLogos__facebook" src="./images/icon_facebook.png" />
 
           <a href="https://www.linkedin.com/in/alejandrogarciacarmona/">
-            <img class="packLogos__linkedin" src="./images/icon_linkedin.jpg"
-          /></a>
+            <img class="packLogos__linkedin" src="./images/icon_linkedin.jpg" />
+          </a>
         </div>
       </div>
     </footer>
