--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
             </div>
 
             <div class="section4__form__terms">
-              <input class="section4__form__terms__checkbox" type="checkbox" required />
+              <input id="terms" value="check" class="section4__form__terms__checkbox" type="checkbox" required />
               <p class="section4__form__terms__text">
                 I hereby give consent for my personal data included in my
                 application to be processed for the purposes of the recruitment
