repeat validation, not working correctly

--- a/index.html
+++ b/index.html
@@ -428,16 +428,19 @@
         <div class="section4__form">
           <form id="contact_form">
             <div class="section4__form__pack">
-              <label for="name" class="section4__form__pack__text" minlength="2" maxlength="100">NAME</label>
-              <input id="name" name="name" type="text" required/>
+              <label for="nameField" class="section4__form__pack__text">NAME</label>
+              <input id="nameField " name="nameField" type="text" minlength="2" maxlength="100"/>      
+              <span class="error" aria-live="polite"></span>
             </div>
+
             <div class="section4__form__pack">
               <label for="email" class="section4__form__pack__text">EMAIL:</label>
-              <input id="email" name="email" type="email" required/>
+              <input id="email" name="email" type="text"/>
+              <span class="error" aria-live="polite"></span>
             </div>
 
             <div class="section4__form__terms">
-              <input id="terms" value="check" class="section4__form__terms__checkbox" type="checkbox" required />
+              <input id="terms" class="section4__form__terms__checkbox" type="checkbox" />
               <p class="section4__form__terms__text">
                 I hereby give consent for my personal data included in my
                 application to be processed for the purposes of the recruitment
