finish and correct validation form

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
         <div class="section4__header">
           <h1>Any questions?</h1>
           <p class="section4__header__subtitle">
-            Leave your email address or call us!
+            Leave your emailContact address or call us!
           </p>
 
           <div class="section4__header__contact">
@@ -428,16 +428,16 @@
         <div class="section4__form">
           <form id="contact_form">
             <div class="section4__form__pack">
-              <label for="nameField" class="section4__form__pack__text">NAME</label>
-              <span id="nameFieldError" class="error" aria-live="polite">The name must be between 2 and 100 characters and not have numbers.</span>
-              <input id="nameField " name="nameField" type="text" class="section4__form__pack__input"/>      
+              <p><label for="nameContact" class="section4__form__pack__text">NAME</label></p>
+              <span id="nameContactError" class="error" aria-live="polite">The name must be between 2 and 100 characters and not have numbers.</span>
+              <input id="nameContact" name="nameContact" type="text" class="section4__form__pack__input"/>      
             </div>
             
             <div class="section4__form__pack">
-              <label for="email" class="section4__form__pack__text">EMAIL:</label>
-              <span class="error" id="nameFieldError" aria-live="polite">Please enter a valid email.</span>
-              <input id="email" name="email" type="text" class="section4__form__pack__input"/>
-              <span class="error" id="nameFieldError" aria-live="polite">You must agree to terms and conditions.</span>
+              <p><label for="emailContact" class="section4__form__pack__text">EMAIL:</label></p>
+              <span class="error" id="emailContactError" aria-live="polite">Please enter a valid emailContact.</span>
+              <input id="emailContact" name="emailContact" type="text" class="section4__form__pack__input"/>
+              <span class="error" id="termsError" aria-live="polite">You must agree to terms and conditions.</span>
             </div>
             
             <div class="section4__form__terms">
@@ -482,8 +482,8 @@
     </footer>
 
     <script src="./scripts/nav.js"></script>
+    <script src="./scripts/section4.js"></script>
     <script src="./scripts/components/percentageScroller.js"></script>
     <script src="./scripts/components/butomToUp.js"></script>
-    <script src="./scripts/components/form.js"></script>
   </body>
 </html>
