--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
     </footer>
 
     <script src="./scripts/nav.js"></script>
-    <script src="./scripts/section4.js"></script>
+    <script src="./scripts/formContact.js"></script>
     <script src="./scripts/components/percentageScroller.js"></script>
     <script src="./scripts/components/butomToUp.js"></script>
   </body>
