--- a/index.html
+++ b/index.html
@@ -229,6 +229,15 @@
       <section class="section3">
         <h3>Pricing</h3>
 
+        <div class="section3__currencySelector">
+          <label for "currencySelect">Choose a currency:</label>
+          <div class="section3__currencySelector__buttonContainer">
+            <button class="section3__currencySelector__buttonContainer__buttonSelector" value="EUR">EUR</button>
+            <button class="section3__currencySelector__buttonContainer__buttonSelector" value="USD">USD</button>
+            <button class="section3__currencySelector__buttonContainer__buttonSelector" value="GBP">GBP</button>
+          </div> 
+        </div>
+
         <div class="limit3">
           <article class="section3__card3">
             <div class="section3__card3__containerPrice">
@@ -381,6 +390,8 @@
             <button class="section3__card3__button">Begin</button>
           </article>
         </div>
+
+        
       </section>
 
       <section class="section4">
