--- a/index.html
+++ b/index.html
@@ -230,11 +230,11 @@
         <h3>Pricing</h3>
 
         <div class="section3__currencySelector">
-          <label for "currencySelect">Choose a currency:</label>
+          <p>Choose a currency:</p>
           <div class="section3__currencySelector__buttonContainer">
-            <button class="section3__currencySelector__buttonContainer__buttonSelector" value="EUR">EUR</button>
-            <button class="section3__currencySelector__buttonContainer__buttonSelector" value="USD">USD</button>
-            <button class="section3__currencySelector__buttonContainer__buttonSelector" value="GBP">GBP</button>
+            <button class="section3__currencySelector__buttonContainer__buttonSelector" value="eur">EUR</button>
+            <button class="section3__currencySelector__buttonContainer__buttonSelector" value="usd">USD</button>
+            <button class="section3__currencySelector__buttonContainer__buttonSelector" value="gbp">GBP</button>
           </div> 
         </div>
 
@@ -496,5 +496,6 @@
     <script src="./scripts/formContact.js"></script>
     <script src="./scripts/components/percentageScroller.js"></script>
     <script src="./scripts/components/butomToUp.js"></script>
+    <script src="./scripts/components/currentSelector.js"></script>
   </body>
 </html>
