--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
               <p class="section3__card3__containerPrice__basic">
                 <strong>Basic</strong>
               </p>
-              <p class="section3__card3__containerPrice__price">$0</p>
+              <p class="section3__card3__containerPrice__price">€ 0</p>
               <p class="section3__card3__containerPrice__subtitle">&nbsp;</p>
             </div>
 
@@ -293,7 +293,7 @@
               <p class="section3__card3__containerPrice__basic">
                 <strong>Profesional</strong>
               </p>
-              <p class="section3__card3__containerPrice__price">$25</p>
+              <p class="section3__card3__containerPrice__price">€ 25</p>
               <p class="section3__card3__containerPrice__subtitle">
                 Limited offer
               </p>
@@ -344,7 +344,7 @@
               <p class="section3__card3__containerPrice__basic">
                 <strong>Premium</strong>
               </p>
-              <p class="section3__card3__containerPrice__price">$60</p>
+              <p class="section3__card3__containerPrice__price">€ 60</p>
               <p class="section3__card3__containerPrice__subtitle">
                 Limited offer
               </p>
