--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
         <button id="closeModalX" class="back__modal__closeModalX">X</button>
         <form id="modalForm">
           <h3>Subscribe to our newsletter</h3>
-          <input type="email" id="emailContact" placeholder="Your mail here..." required/>
+          <input
+            type="email"
+            id="emailContact"
+            placeholder="Your mail here..."
+            required
+          />
           <!-- <span class="error" id="emailContactError" aria-live="polite"
                 >Please enter a valid emailContact.</span
               > -->
@@ -419,6 +424,20 @@
             <button class="section3__card3__button">Begin</button>
           </article>
         </div>
+      </section>
+
+      <section id="section_slider" class="slider">
+        <button class="left">
+          <img src="./images/slider_left.png"/>
+        </button>
+        
+        <div class="screen">
+          <img src="./images/slider_img1.jpg"/>
+        </div>
+        
+        <button class="right">
+          <img src="./images/slider_right.png"/>
+        </button>
       </section>
 
       <section class="section4">
