--- a/index.html
+++ b/index.html
@@ -427,17 +427,17 @@
       </section>
 
       <section id="section_slider" class="slider">
-        <button class="left">
-          <img src="./images/slider_left.png"/>
-        </button>
-        
-        <div class="screen">
-          <img src="./images/slider_img1.jpg"/>
+        <div class="slider__screen">
+          <button class="left">
+            <img src="./images/slider_left.png" />
+          </button>
+
+          <img name="img" />
+
+          <button class="right">
+            <img src="./images/slider_right.png" />
+          </button>
         </div>
-        
-        <button class="right">
-          <img src="./images/slider_right.png"/>
-        </button>
       </section>
 
       <section class="section4">
@@ -569,6 +569,7 @@
     <script src="./scripts/components/modal.js"></script>
     <script src="./scripts/formContact.js"></script>
     <script src="./scripts/components/percentageScroller.js"></script>
+    <script src="./scripts/components/slider.js"></script>
     <script src="./scripts/components/butomToUp.js"></script>
     <script src="./scripts/components/currentSelector.js"></script>
   </body>
