add identificators slider

--- a/index.html
+++ b/index.html
@@ -436,6 +436,9 @@
         <button class="right">
           <img src="./images/slider_right.png" />
         </button>
+        <div class="slider__indicatorsContainer">
+          <div class="slider__indicatorsContainer__indicator"></div>
+        </div>
       </section>
 
       <section class="section4">
