change slider.js to class Slider

--- a/index.html
+++ b/index.html
@@ -437,7 +437,6 @@
           <img src="./images/slider_right.png" />
         </button>
         <div class="slider__indicatorsContainer">
-          <div class="slider__indicatorsContainer__indicator"></div>
         </div>
       </section>
 
@@ -445,7 +444,7 @@
         <div class="section4__header">
           <h1>Any questions?</h1>
           <p class="section4__header__subtitle">
-            Leave your emailContact address or call us!
+            Leave your email address or call us!
           </p>
 
           <div class="section4__header__contact">
